WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
247913
Percent-width blocks cannot form a re-layout boundary
https://bugs.webkit.org/show_bug.cgi?id=247913
Summary
Percent-width blocks cannot form a re-layout boundary
Ahmad Saleem
Reported
2022-11-14 13:23:31 PST
Hi Team, While going through Blink Commits, I came across another, which we should merge since this fixes another failing test: Blink Commit -
https://chromium.googlesource.com/chromium/src.git/+/da179e152dff0ab3e3dabc72299bd4fb586881c9
Webkit GitHub -
https://github.com/WebKit/WebKit/blob/7ed06b348948ce6b702c93bcd2be63960cf56952/Source/WebCore/rendering/RenderObject.cpp#LL534
Failing Test (passes in Chrome Canary 110 & Firefox Nightly 108) -
https://jsfiddle.net/8d47mtvL/show
Just wanted to create a bug to track for future purposes. Note - Both Safari 16.1 and Safari Tech Preview 157 fail this. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-11-21 02:22:12 PST
Committed
256901@main
(b42824bb6c99): <
https://commits.webkit.org/256901@main
> Reviewed commits have been landed. Closing PR #6677 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-11-21 02:23:15 PST
<
rdar://problem/102577429
>
WebKit Commit Bot
Comment 3
2022-12-08 11:53:53 PST
Re-opened since this is blocked by
bug 248967
Ahmad Saleem
Comment 4
2023-04-03 05:47:01 PDT
@Alan - I noticed that I didn't did 'const' part in this merge for object().style(). Could this help in the performance issue in page loading? I can do PR but is it possible to run it via some A/B testing internally to see whether 'const' part does not regress performance? const auto* style = object->style();
Ahmad Saleem
Comment 5
2023-04-03 07:36:25 PDT
(In reply to Ahmad Saleem from
comment #4
)
> @Alan - I noticed that I didn't did 'const' part in this merge for > object().style(). Could this help in the performance issue in page loading? > > I can do PR but is it possible to run it via some A/B testing internally to > see whether 'const' part does not regress performance? > > const auto* style = object->style();
This compiles: const auto& style = object->style(); if (!style.width().isFixed() || !style.height().isFixed()) return false;
alan
Comment 6
2023-04-03 07:59:07 PDT
(In reply to Ahmad Saleem from
comment #4
)
> @Alan - I noticed that I didn't did 'const' part in this merge for > object().style(). Could this help in the performance issue in page loading? > > I can do PR but is it possible to run it via some A/B testing internally to > see whether 'const' part does not regress performance? > > const auto* style = object->style();
I am not sure if that's what the PLT regression is about. I think the expensive part of this change is where we can't (incorrectly) do boundary layout anymore on certain type of content (which means spending more time in layout). We probably need to find a different way of addressing this correctness issue.
Ahmad Saleem
Comment 7
2025-03-03 19:16:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41828
EWS
Comment 8
2025-03-04 19:09:34 PST
Committed
291607@main
(8fafd9511671): <
https://commits.webkit.org/291607@main
> Reviewed commits have been landed. Closing PR #41828 and removing active labels.
Ahmad Saleem
Comment 9
2025-04-03 16:55:27 PDT
Reverted once again -
https://commits.webkit.org/293192@main
(Although I have more information now that it only happens on specific machine and specific test case).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug