Percent-width blocks cannot form a re-layout boundary

Percent-width blocks cannot form a re-layout boundary
https://bugs.webkit.org/show_bug.cgi?id=247913

Reviewed by Alan Baradlay.

This patch is to align Webkit behavior with Blink / Chromium and Gecko / Firefox.

Merge - https://chromium.googlesource.com/chromium/src.git/+/da179e152dff0ab3e3dabc72299bd4fb586881c9

A block with non-visible overflow can only form a re-layout boundary if both
width and height are fixed.

The block may be inside a shrink-to-fit container (there's no cheap and
reliable way to detect that), so that changes inside it may affect its width.

* Source/WebCore/rendering/RenderObject.cpp:
(objectIsRelayoutBoundary): Add comment and update logic
of relayout for non-fixed container
* LayoutTests/fast/css-intrinsic-dimension/resize-inside-percent-width-overflow-hidden.html: Added Test Case
* LayoutTests/fast/css-intrinsic-dimension/resize-inside-percent-width-overflow-hidden-expected.txt: Added Test Case Expectations

Canonical link: https://commits.webkit.org/256901@main