Source/WebCore/rendering/RenderObject.cpp
@@ -4,7 +4,7 @@
  *           (C) 2000 Dirk Mueller (mueller@kde.org)
  *           (C) 2004 Allan Sandfeld Jensen (kde@carewolf.com)
  * Copyright (C) 2004-2020 Apple Inc. All rights reserved.
- * Copyright (C) 2009 Google Inc. All rights reserved.
+ * Copyright (C) 2009-2022 Google Inc. All rights reserved.
  * Copyright (C) 2009 Torch Mobile Inc. All rights reserved. (http://www.torchmobile.com/)
  *
  * This library is free software; you can redistribute it and/or
@@ -527,8 +527,13 @@ static inline bool objectIsRelayoutBoundary(const RenderElement* object)
     if (object->document().settings().layerBasedSVGEngineEnabled() && object->isSVGLayerAwareRenderer())
         return false;
 #endif
-
-    if (object->style().width().isIntrinsicOrAuto() || object->style().height().isIntrinsicOrAuto() || object->style().height().isPercentOrCalculated())
+    
+    // If either dimension is percent-based, intrinsic, or anything but fixed
+    // this object cannot form a re-layout boundary. A non-fixed computed logical
+    // height will allow the object to grow and shrink based on the content
+    // inside. The same goes for for logical width, if this objects is inside a
+    // shrink-to-fit container, for instance.
+    if (!object->style().width().isFixed() || !object->style().height().isFixed())
         return false;
 
     // Table parts can't be relayout roots since the table is responsible for layouting all the parts.
